--- a/SistemaDesaparecidos/src/app/components/form-avistamientos/form-avistamientos.component.html
+++ b/SistemaDesaparecidos/src/app/components/form-avistamientos/form-avistamientos.component.html
@@ -13,8 +13,8 @@
     </div>
 
     <!-- Mapa siempre visible e interactivo -->
-    <div id="mapaAvistamiento" style="height: 300px; margin-bottom: 1em;"></div>
-
+    <div #mapContainer id="mapaAvistamiento" style="height: 300px; margin-bottom: 1em;"></div>
+        
     <div class="form-group">
       <label for="descripcion">📝 Descripción</label>
       <textarea id="descripcion" name="descripcion" [(ngModel)]="nuevoAvistamiento.descripcion" placeholder="Describe lo que viste..." rows="4"></textarea>
